--- a/extension/reader.html
+++ b/extension/reader.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>Google Scholar Reader with Annotations</title>
   <link rel="stylesheet" href="/reader-prod.css">
-  <link rel="stylesheet" href="/annotation.css">
+  <link rel="stylesheet" href="/annotation/annotation.css">
   <script src="/reader-compiled.js" defer></script>
-  <script src="/annotation.js" defer></script>
+  <script src="/annotation/annotation.js" defer></script>
 </head>
 <body>
   <div class="gsr-root-wrap"></div>
