--- a/extension/reader.html
+++ b/extension/reader.html
@@ -14,26 +14,23 @@
   <div id="annotation-toolbar">
     <button id="highlight-btn" class="toolbar-button" data-tooltip="Highlight">
       <span class="material-symbols-outlined">ink_highlighter</span>
-    </button>
-    <div id="color-picker">
-      <button id="color-picker-btn" class="toolbar-button" data-tooltip="Choose Color">
-        <span class="material-symbols-outlined">palette</span>
-      </button>
-      <div id="color-popup">
-        <button class="color-option" style="background-color: yellow;" data-color="yellow"></button>
-        <button class="color-option" style="background-color: greenyellow;" data-color="greenyellow"></button>
-        <button class="color-option" style="background-color: cyan;" data-color="cyan"></button>
-        <button class="color-option" style="background-color: magenta;" data-color="magenta"></button>
-        <button class="color-option" style="background-color: red;" data-color="red"></button>
-      </div>
-    </div>
+  </button>
+  <button id="draw-btn" class="toolbar-button" data-tooltip="Draw">
+      <span class="material-symbols-outlined">brush</span>
+  </button>
+  <button id="text-btn" class="toolbar-button" data-tooltip="Add Text">
+      <span class="material-symbols-outlined">text_fields_alt</span>
+  </button>
     <button id="erase-btn" class="toolbar-button" data-tooltip="Erase Highlights">
       <span class="material-symbols-outlined">ink_eraser</span>
     </button>
     <button id="erase-all-btn" class="toolbar-button" data-tooltip="Erase All">
       <span class="material-symbols-outlined">delete</span>
     </button>
-    <button id="support-btn" class="toolbar-button" data-tooltip="Support">
+    <button id="settings-btn" class="toolbar-button" data-tooltip="Settings">
+      <span class="material-symbols-outlined">settings</span>
+    </button>
+    <button id="star-btn" class="toolbar-button" data-tooltip="Star the repo!">
       <span class="material-symbols-outlined">star</span>
     </button>
   </div>
