Shorten button tooltips

--- a/extension/reader.html
+++ b/extension/reader.html
@@ -18,10 +18,10 @@
   <button id="draw-btn" class="toolbar-button" data-tooltip="Draw">
       <span class="material-symbols-outlined">brush</span>
   </button>
-  <button id="text-btn" class="toolbar-button" data-tooltip="Add Text">
+  <button id="text-btn" class="toolbar-button" data-tooltip="Text">
       <span class="material-symbols-outlined">text_fields_alt</span>
   </button>
-    <button id="erase-btn" class="toolbar-button" data-tooltip="Erase Highlights">
+    <button id="erase-btn" class="toolbar-button" data-tooltip="Erase">
       <span class="material-symbols-outlined">ink_eraser</span>
     </button>
     <button id="erase-all-btn" class="toolbar-button" data-tooltip="Erase All">
