Added function to export the annotated PDF.

--- a/extension/reader.html
+++ b/extension/reader.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/reader-prod.css">
   <link rel="stylesheet" href="/annotation/annotation.css">
   <script src="/reader-compiled.js" defer></script>
+  <script src="libs/pdf-lib.min.js"></script>
   <script src="/annotation/annotation.js" defer></script>
 </head>
 <body>
@@ -29,6 +30,9 @@
     </button>
     <button id="settings-btn" class="toolbar-button" data-tooltip="Settings">
       <span class="material-symbols-outlined">settings</span>
+    </button>
+    <button id="export-btn" class="toolbar-button" data-tooltip="Export Annotated PDF">
+      <span class="material-symbols-outlined">save</span>
     </button>
     <button id="star-btn" class="toolbar-button" data-tooltip="Star the repo!">
       <span class="material-symbols-outlined">star</span>
